# framework

./: README.md  makefile  pyproject.toml  setup.cfg
src/: app.py  factories.py  ports.py  run.py  server.py
src/server/: app_fixture.py  container.py  exceptions.py  ports.py  run.py  utils.py
src/server/infrastructure/: loop.py  parser.py  socket.py  sockets.py  spec.py
src/server/services/: conn_handler.py  server.py
tests/: client.py  conftest.py  test_factories.py  test_server.py
tests/base/: client.py  test_client.py
tests/server/: test_server.py  test_utils.py
tests/server/infrastructure/: conftest.py  test_loop.py  test_parser.py  test_socket.py  test_spec.py
