[tool.poetry]
name = "framework"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
runserver = "src.server.run:run"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
mypy = "^1.8.0"
pytest-mock = "^3.12.0"
aiohttp = "^3.9.1"
pytest-aiohttp = "^1.0.5"
black = "^23.12.1"
fastapi = "^0.109.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
